unpackaged/main/default/objects/Tyre_Collection_Appointment__c/Tyre_Collection_Appointment__c.object-meta.xml
<CustomObject>
    <description>Label name is changed to accommodate same object for all tyre appointments, please note dont confuse with API name</description>
    <label>Tyre Service Appointment</label>
    <nameField>
        <displayFormat>TSA-{00000}</displayFormat>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tyre Service Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>