unpackaged/main/default/objects/Tyre_Collection_Appointment__c/fields/Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Start</label>
    <type>DateTime</type>
</CustomField>