unpackaged/main/default/objects/Tyre_Collection_Appointment__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tyre_Collection_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>