unpackaged/main/default/objects/Tyre_Collection_Appointment__c/fields/Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tyre_Collection_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>