unpackaged/main/default/objects/Tyre_Collection_Appointment__c/fields/Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>