unpackaged/main/default/objects/Tyre_Collection_Appointment__c/fields/Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>