unpackaged/main/default/objects/Tyre_Collection_Appointment__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipName>Tyre_Collection_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>