unpackaged/main/default/objects/Tyre_Collection_Appointment__c/validationRules/DriverChangeReasonValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DriverChangeReasonValidation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Driver__c)</errorConditionFormula>
    <errorDisplayField>Driver_Change_Reason__c</errorDisplayField>
    <errorMessage>Reason is required.</errorMessage>
</ValidationRule>