unpackaged/main/default/objects/Tyre_Collection_Appointment__c/validationRules/ScheduleEndDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ScheduleEndDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Scheduled_Start__c &gt; Scheduled_End__c</errorConditionFormula>
    <errorDisplayField>Scheduled_End__c</errorDisplayField>
    <errorMessage>Schedule end date/time should be greater than start date/time</errorMessage>
</ValidationRule>