unpackaged/main/default/objects/Tyre_Collection_Appointment__c/validationRules/ScheduleStartDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ScheduleStartDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Scheduled_Start__c &lt; NOW() &amp;&amp;  ISNEW()</errorConditionFormula>
    <errorDisplayField>Scheduled_Start__c</errorDisplayField>
    <errorMessage>Schedule start date/time should be future date.</errorMessage>
</ValidationRule>